# NEXUS

./: .credentials-secure.txt  .dockerignore  .gitignore  .n8n-api-key.txt  ACCESSING_WORKFLOWS.md  ACCESS_N8N_LOCALLY.md  ALL_GEMINI_NODES_FIXED_FINAL.md  ARCHITECTURE.md  AUDIT_INDEX.md  BULK_IMPORT_OPTIONS.md  BULK_IMPORT_SUMMARY.txt  CLOUDFLARE_TUNNEL_SETUP.md  COMPLETE_FIX_IMPLEMENTATION.md  COMPLETE_SESSION_SUMMARY.md  CREDENTIAL_SETUP_QUICK_GUIDE.md  Cargo.toml  DATABASE_NODES_SUMMARY.txt  DEEP_DIAGNOSTIC_REPORT.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STEPS.md  DEPLOY_ALL_WORKFLOWS_NOW.md  DISASTER_RECOVERY_RUNBOOK.md  Dockerfile  Dockerfile.agent  Dockerfile.mcp  EMERGENCY_FIX.md  FAIL2BAN_SETUP.md  FINAL_DATABASE_AUDIT_VERIFICATION.md  FINAL_E2E_TEST_REPORT.md  FINAL_FIXES_APPLIED.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FIXES_SUMMARY_MARCH2.md  FIX_SUMMARY.md  GEMINI_API_MIGRATION.md  GEMINI_API_UPDATE_SUMMARY.md  GEMINI_FIX_SUMMARY.txt  GEMINI_NODES_RECREATED.md  GEMINI_WORKFLOW_OPTIMIZATION_GUIDE.md  (+94 more)
agents/: analyticsManager.ts  base.ts  biAgent.ts  config.json  crmAgent.ts  customerExperienceManager.ts  financeAgent.ts  financeManager.ts  fraudAgent.ts  itAgent.ts  leader.ts  marketingAgent.ts  marketingManager.ts  marketingOptimizer.ts  negotiationAgent.ts  operationsManager.ts  orderProcessor.ts  performanceAnalyzer.ts  procurement.ts  (+12 more)
rust-agents/: Cargo.toml
rust-agents/crates/compute/: Cargo.toml
rust-agents/crates/compute/src/: lib.rs
rust-agents/crates/service/: Cargo.toml  Dockerfile
rust-agents/crates/service/src/: main.rs
(+511 files in other folders)
