[package]
name = "nexus-service"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
# add crates needed for testing
hyper = "0.14"
tower = "0.5"
nexus-compute = { path = "../compute" }
serde.workspace = true
serde_json.workspace = true
